<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/question_text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/trueBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_btn"/>
        <Button
            android:id="@+id/falseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_btn"/>

    </LinearLayout>

    <Button
        android:id="@+id/cheatBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheat_btn"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/prevBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left"/>

        <ImageButton
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_right"/>

    </LinearLayout>

</LinearLayout>
