<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="action_settings">Settings</string>
    <string name="question_text">question</string>
    <string name="true_btn">Yes</string>
    <string name="false_btn">No</string>
    <string name="toast_correct">correct</string>
    <string name="toast_incorrect">incorrect</string>
    <string name="toast_judgment">Cheater!</string>
    <string name="cheat_btn">cheat</string>
    <string name="warning_txt">Are you sure?</string>
    <string name="show_answer_btn">show</string>
</resources>
